maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: Unit does not take parameters
     	avance()()
                ^